--- a/app/src/main/res/layout/show_event_fragment.xml
+++ b/app/src/main/res/layout/show_event_fragment.xml
@@ -156,8 +156,8 @@
 
                         <ImageView
 
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:src="@drawable/people">
 
@@ -176,7 +176,7 @@
                             android:focusable="false"
                             android:id="@+id/affectedPeople"
                             android:layout_width="match_parent"
-                            android:layout_height="40dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:layout_marginStart="@dimen/cardview_default_elevation"
                             tools:ignore="UseSwitchCompatOrMaterialXml">
@@ -191,8 +191,8 @@
 
                         <ImageView
 
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:src="@drawable/family2">
 
@@ -210,7 +210,7 @@
                             android:focusable="false"
                             android:id="@+id/affectedFamily"
                             android:layout_width="match_parent"
-                            android:layout_height="40dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:layout_marginStart="@dimen/cardview_default_elevation">
 
@@ -223,8 +223,8 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:src="@drawable/animal">
 
@@ -242,7 +242,7 @@
                             android:focusable="false"
                             android:id="@+id/affectedAnimals"
                             android:layout_width="match_parent"
-                            android:layout_height="40dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:layout_marginStart="@dimen/cardview_default_elevation">
 
@@ -256,8 +256,8 @@
 
                         <ImageView
 
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:src="@drawable/infra">
 
@@ -275,7 +275,7 @@
                             android:focusable="false"
                             android:id="@+id/affectedInfrastructure"
                             android:layout_width="match_parent"
-                            android:layout_height="40dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:layout_marginStart="@dimen/cardview_default_elevation">
 
@@ -289,8 +289,8 @@
 
                         <ImageView
 
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:src="@drawable/nature">
 
@@ -307,7 +307,7 @@
                             android:focusable="false"
                             android:id="@+id/affectedLivelihoods"
                             android:layout_width="match_parent"
-                            android:layout_height="40dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:layout_marginStart="@dimen/cardview_default_elevation"
                             tools:ignore="UseSwitchCompatOrMaterialXml" />
@@ -323,8 +323,8 @@
 
                         <ImageView
 
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:src="@drawable/baseline_cloudy_snowing_black_20">
 
@@ -341,7 +341,7 @@
                         <Switch
                             android:id="@+id/affectedEnviroment"
                             android:layout_width="match_parent"
-                            android:layout_height="40dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:layout_marginStart="@dimen/cardview_default_elevation">
 
@@ -406,7 +406,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="10dp"
-                        android:text="Cancelar alerta">
+                        android:text="Denegar alerta">
                     </Button>
 
                 </LinearLayout>
